# run_in_job_object

./: .gitignore
managed/: GcEventListener.cs  Program.cs
run_in_job/: CMakeLists.txt  run_in_job.cpp  run_in_job.md
run_in_job/inc/: job_object.hpp
